# folder-subscription

./: Cargo.toml  LICENSE
config/: config.json
ref/: gpt.rs
src/: config.rs  downloader.rs  lib.rs  main.rs  scanner.rs  synchronizer.rs  webdav_client.rs
