[package]
name = "resource_synchronizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "resource_synchronizer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"]}
xmltree = "0.8"
base64 = "0.13"
tokio = { version = "1.28", features = ["full"] }
# async-std = { version = "1", features = ["attributes", "tokio1"] }
percent-encoding = "2.3"
url = "2.2"